chore: add professional links (ResearchGate, LinkedIn) and GitHub Pages deploy workflow

--- a/index.html
+++ b/index.html
@@ -241,6 +241,15 @@
           </div>
           <button type="submit" class="btn primary">Send Message</button>
         </form>
+
+        <div class="contact-socials" aria-label="Professional links" style="margin-top:1rem">
+          <p style="margin:0 0 0.5rem;color:var(--muted)">Find me professionally:</p>
+          <p style="margin:0">
+            <a href="https://www.researchgate.net/profile/Juan-Colon-Norat" target="_blank" rel="noopener" style="margin-right:1rem">ResearchGate</a>
+            <a href="https://www.linkedin.com/in/juan-arturo-colon-norat-47585532/" target="_blank" rel="noopener" style="margin-right:1rem">LinkedIn</a>
+            <a href="https://academia.example.com" target="_blank" rel="noopener">Academia.edu</a>
+          </p>
+        </div>
       </div>
     </section>
   </main>
@@ -249,9 +258,9 @@
     <div class="container footer-inner">
       <p>© Juan A. Colón Norat — All Rights Reserved</p>
       <nav class="footer-nav" aria-label="Footer">
-        <a href="#">ResearchGate</a>
-        <a href="#">LinkedIn</a>
-        <a href="#">Academia.edu</a>
+        <a href="https://www.researchgate.net/profile/Juan-Colon-Norat" target="_blank" rel="noopener">ResearchGate</a>
+        <a href="https://www.linkedin.com/in/juan-arturo-colon-norat-47585532/" target="_blank" rel="noopener">LinkedIn</a>
+        <a href="https://academia.example.com" target="_blank" rel="noopener">Academia.edu</a>
       </nav>
     </div>
   </footer>
